fix: Card component not stretching evenly

--- a/source/_assets/sass/_card.scss
+++ b/source/_assets/sass/_card.scss
@@ -2,6 +2,7 @@
     box-shadow: $box-shadow;
     border: 0;
     border-radius: 1rem;
+    width: 100%;
 
     .card-img-top {
         border-radius: 1rem 1rem 0 0;
